# rest-framework-auth-toolkit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup-develop.py  setup.py  tox.ini
.circleci/: config.yml
demo/: README.md  manage.py  requirements.in  requirements.txt  wsgi.py
demo/demo/: settings.py  urls.py
demo/demo/accounts/: admin.py  app.py  authentication.py  models.py  urls.py  views.py
demo/demo/accounts/migrations/: 0001_initial.py  0002_auto_20180222_0012.py  0003_auto_20180921_2351.py  0004_auto_20210112_0329.py  0005_auto_20210511_1956.py  0006_alter_emailconfirmation_external_id.py
demo/demo/accounts/templates/rest_auth_toolkit/: email_confirmation.html  email_confirmation.txt
demo/demo/accounts/templatetags/: demotags.py
demo/demo/pages/: app.py  auth_urls.py  urls.py  views.py
demo/demo/pages/templates/: base.html  error.html  index.html  welcome.html
rest_auth_toolkit/: __init__.py  admin.py  app.py  authentication.py  fields.py  managers.py  models.py  serializers.py  utils.py  views.py
rest_auth_toolkit/locale/fr/LC_MESSAGES/: django.mo  django.po
rest_auth_toolkit/templates/rest_auth_toolkit/: email_confirmation.html  email_confirmation.txt
tests/: conftest.py
tests/functional/: conftest.py  test_email.py  test_facebook.py  test_token_auth.py
tests/unit/: conftest.py  test_models.py
