[build-system]
requires = ["flit_core>=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rest_auth_toolkit"
dist-name = "Rest_Framework_Auth_Toolkit"
author = "Caravan Coop"
author-email = "hi@caravan.coop"
home-page = "https://github.com/caravancoop/rest-framework-auth-toolkit"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.1",
]
requires = [
    "django >= 2.2",
]

[tool.flit.metadata.requires-extra]
facebook = ["facepy"]
