[build-system]
requires = ["flit_core ~= 3.2.0"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version", "description"]
name = "Rest_Framework_Auth_Toolkit"
authors = [ { name = "Caravan Coop", email = "hi@caravan.coop" } ]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
]
dependencies = [
    "django >= 2.2",
]

[project.optional-dependencies]
facebook = ["facepy"]

[project.urls]
Homepage = "https://github.com/caravancoop/rest-framework-auth-toolkit"
Changelog = "https://github.com/caravancoop/rest-framework-auth-toolkit/blob/main/CHANGELOG.md"

[tool.flit.module]
name = "rest_auth_toolkit"
